# pmonitor

./: README.md  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
monitorlib/: Android.mk  Application.mk  build.gradle
monitorlib/src/androidTest/java/com/junie/monitorlib/: ExampleInstrumentedTest.java
monitorlib/src/main/: Android.mk  AndroidManifest.xml
monitorlib/src/main/java/com/junie/monitorlib/: Pmonitor.java  Test.java
monitorlib/src/main/java/com/junie/monitorlib/config/: LaggingWaringLevel.java
monitorlib/src/main/java/com/junie/monitorlib/crash/: AnrCrashHandler.java  CrashHandler.java  CrashInfo.java  JavaCrashHandler.java  NativeCrashHandler.java  ThreadInfo.java
monitorlib/src/main/java/com/junie/monitorlib/leak/: LeakHandler.java
monitorlib/src/main/java/com/junie/monitorlib/listener/: LogPrinterListener.java
monitorlib/src/main/java/com/junie/monitorlib/parser/: TraceFileParser.java
monitorlib/src/main/java/com/junie/monitorlib/printer/: LogPrinter.java
monitorlib/src/main/java/com/junie/monitorlib/util/: LogcatUtils.java  ProcessUtils.java
monitorlib/src/main/jni/: CMakeLists.txt  nativecrashhandler.cpp
monitorlib/src/main/jni/google-breakpad/src/client/linux/crash_generation/: crash_generation_server.cc
monitorlib/src/main/jni/google-breakpad/src/client/mac/Framework/: Breakpad.mm
monitorlib/src/main/jni/google-breakpad/src/common/mac/testing/: GTMSenTestCase.m
monitorlib/src/main/jni/google-breakpad/src/testing/gtest/samples/: sample10_unittest.cc  sample5_unittest.cc
monitorlib/src/main/jni/google-breakpad/src/testing/gtest/src/: gtest-internal-inl.h
monitorlib/src/main/jni/google-breakpad/src/testing/src/: gmock-spec-builders.cc
monitorlib/src/main/jni/google-breakpad/src/testing/test/: gmock_leak_test_.cc
monitorlib/src/main/res/values/: strings.xml
monitorlib/src/test/java/com/junie/monitorlib/: ExampleUnitTest.java
sample/: build.gradle
sample/src/androidTest/java/com/junie/pmonitor/: ExampleInstrumentedTest.java
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/junie/pmonitor/: MainActivity.java
sample/src/main/res/layout/: activity_main.xml
sample/src/main/res/values/: strings.xml
sample/src/test/java/com/junie/pmonitor/: ExampleUnitTest.java
